--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,437 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --color-1: #998b7b;
+  --color-1-dark: #58442a;
+  --color-2: #d4ccb0;
+  --color-2-bright: #e9e4d3;
+  --color-3: #3a5874;
+  --color-3-light: #3a5874a6;
+  --color-3-opaque: #3a587425;
+  --color-4: #7894b0;
+  --color-5: #94a6bb;
+  --color-5-bright: #ccd5df;
+  --color-6: rgb(238, 231, 231);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+section {
+  padding: 25px 8px;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+}
+
+.section-title {
+  color: var(--color-4);
+  font-style: oblique;
+  margin-bottom: 16px;
+}
+
+/* Header Styles Start */
+header {
+  text-align: center;
+  padding: 10px 0;
+  background-color: var(--color-2);
+}
+
+header h1 {
+  width: 100%;
+  color: var(--color-5);
+  font-size: 44px;
+  font-weight: normal;
+}
+
+header span {
+  color: var(--color-4);
+  font-weight: bolder;
+}
+
+header h2 {
+  width: 100%;
+  font-size: 20px;
+  font-weight: normal;
+  font-style: italic;
+  opacity: 0.5;
+}
+/* Header Styles End */
+
+/* Aside Styles Start */ 
+aside {
+  background-color: var(--color-3);
+}
+
+.logo {
+  display: none;
+}
+
+aside ul {
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+aside a {
+  color: var(--color-2);
+  font-weight: bold;
+}
+/* Aside Styles End */
+
+/* About Styles Start */
+.about {
+  background-color: var(--color-6);
+}
+
+.about-flex {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 40px 0 35px;
+}
+
+.about-flex img {
+  width: 35%;
+  border: 3px solid var(--color-1);
+  margin-bottom: 20px;
+  box-shadow: -6px -4px 12px var(--color-1);
+}
+
+.about-flex p {
+  width: 100%;
+  padding-top: 16px;
+  line-height: 1.5;
+  opacity: 0.75;
+}
+/* About Styles End */
+
+/* Work Styles Start */
+.work::before {
+  display: block;
+  content: "";
+  width: 45%;
+  margin: 0 auto;
+  border-top: solid 1px var(--color-1);
+  padding-bottom: 60px;
+}
+
+.work {
+  background-color: var(--color-6);
+  padding-top: 0;
+}
+
+.work-flex {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  text-align: center;
+  width: 85%;
+  margin: 0 auto;
+}
+
+.project {
+  position: relative;
+  width: 48%;
+  margin: 4px 0;
+  opacity: 0.75;
+}
+
+.project:hover {
+  opacity: 1;
+}
+
+.project a {
+  height: 100%;
+}
+
+.project img {
+  opacity: 0.75;
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
+  border: solid 2px var(--color-3);
+  border-radius: 5%;
+}
+
+.project-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  background-color: var(--color-3-light);
+  border-radius: 5%;
+  padding: 6px 0;
+}
+
+.project-text h3 {
+  color: var(--color-5-bright)
+}
+
+.project-text p {
+  color: var(--color-2-bright);
+  font-size: 14px;
+}
+
+.work-flex .project:nth-child(1) {
+  width: 100%;
+  margin-bottom: 8px;
+  line-height: 1.5;
+}
+
+.work-flex .project:nth-child(1) img {
+  width: 100%;
+  border-radius: 3%;
+  border-width: 4px;
+}
+
+.work-flex .project:nth-child(1) .project-text {
+  padding: 10px 0;
+  margin-top: 34px;
+}
+
+.work-flex .project:nth-child(1) h3 {
+  font-size: 24px;
+}
+
+.work-flex .project:nth-child(1) p {
+  font-size: 18px;
+}
+/* Work Styles End */
+
+/* Contact Styles Start */
+.contact-me {
+  background-color: var(--color-2);
+  padding-top: 10px;
+}
+
+.contact-flex {
+  display: flex;
+  justify-content: space-around;
+  line-height: 1.5;
+}
+
+.contact-text h3 {
+  color: var(--color-1-dark);
+}
+
+.contact-text p {
+  color: var(--color-3)
+}
+/* Contact Styles End */
+
+/* Footer Styles Start */
+footer {
+  background-color: var(--color-4);
+  padding: 12px 0 4px;
+}
+
+.footer-flex {
+  width: 40%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  flex-wrap: wrap;
+}
+
+footer a {
+  width: 14%;
+}
+
+footer img {
+  width: 100%;
+  padding: 2px;
+  background-color: var(--color-3-opaque);
+  border-radius: 5%;
+}
+
+footer p {
+  width: 100%;
+  color: white;
+  text-align: center;
+  font-size: 14px;
+}
+
+
+/* Media Queries Start */
+@media screen and (min-width: 576px) {
+
+  /* Header Styles Start */
+  header {
+      padding-bottom: 20px;
+  }
+  /* Header Styles End */
+
+  /* About Styles Start */
+  .about-flex img {
+      width: 30%;
+  }
+
+  .about-flex p {
+      width: 80%;
+      line-height: 1.8;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  
+  /* Utility Classes Start */
+  section {
+      padding: 25px 12px;
+  }
+
+  /* Header Styles Start */
+  header {
+      width: 85%;
+      position: relative;
+      left: 15%;
+  }
+
+  /* Aside Styles Start */
+  aside {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 15%;
+      height: 100vw;
+      text-align: center;
+  }
+
+  .logo {
+      display: initial;
+      position: relative;
+  }
+
+  .logo p {
+      display: inline-block;
+      padding: 0 8px;
+      font-size: 86px;
+      font-weight: lighter;
+      color: var(--color-1);
+      border-bottom: solid 2px;
+      border-color: var(--color-1);
+  }
+
+  aside ul {
+      flex-direction: column;
+      justify-items: center;
+      font-size: 20px;
+  }
+
+  aside li {
+      width: 100%;
+      margin: 6px 0;
+  }
+  /* Aside Styles End */
+
+  /* Main Content */
+  .main-content {
+      position: absolute;
+      right: 0;
+      width: 85%;
+  }
+
+  /* About Styles Start */
+  .about-flex img {
+      width: 30%;
+  }
+
+  .about-flex p {
+      width: 50%;
+  }
+  /* About Styles End */
+
+  /* Work Styles Start */
+  .work-flex {
+      width: 75%;
+  }
+}
+
+@media screen and (min-width: 981px) {
+ 
+  section {
+      padding: 25px 16px;
+  }
+
+  .section-title {
+      font-size: 28px;
+  }
+  
+  /* Header Styles Start */
+  header {
+      padding: 50px;
+  }
+
+  header h1 {
+      font-size: 56px;
+  }
+
+  header h2 {
+      font-size: 22px;
+  }
+  /* Header Styles End */
+
+  /* Aside Styles Start */
+  .logo p {
+      font-size: 120px;
+      padding: 23px 12px;
+  }
+  /* Aside Styles End */
+
+  /* About Styles Start */
+  .about-flex {
+      margin-left: 45px;
+  }
+  
+  .about-flex img {
+      width: 20%;
+  }
+
+  .about-flex p {
+      font-size: 18px;
+  }
+  /* About Styles End */
+
+  /* Work Styles Start */
+  .work-flex {
+      width: 60%;
+  }
+  /* Work Styles End */
+
+  /* Contact Styles Start */
+  .contact-flex {
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: flex-start;
+  }
+
+ .contact-flex .contact-text:nth-child(2) {
+      padding-top: 12px;
+  }
+
+  .contact-text {
+      width: 75%;
+  }
+  /* Contact Styles End */
+
+  /* Footer Styles Start */
+  footer a {
+      width: 12%;
+  }
+
+  footer p {
+      font-size: initial;
+      margin-top: 8px;
+  }
 }
