--- a/src/index.css
+++ b/src/index.css
@@ -207,7 +207,7 @@ aside p {
   margin: auto;
   padding: 10px;
   border: 1px solid black;
-  background-color: var(--color-5-bright)
+  background-color: var(--color-5-bright);
 }
 
 .error-message {
@@ -247,8 +247,35 @@ aside p {
   background-color: var(--color-3);
   color: var(--color-2);
   font-size: 12px;
+  cursor: pointer;
 }
 /* Contact Styles End */
+
+/* Resume Styles Start */
+.resume-card {
+  margin: 30px auto 0;
+  width: 60%;
+  height: 100px;
+  padding: 10px;
+  border: 1px solid black;
+  text-align: center;
+  background-color: var(--color-5-bright);
+  cursor: pointer;
+}
+
+.resume-card:hover {
+  background-color: var(--color-4);
+}
+
+.resume-card p {
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+
+.fa-file-pdf {
+  font-size: 36px;
+}
+/* Resume Styles End */
 
 /* Footer Styles Start */
 footer {
@@ -355,6 +382,21 @@ footer p {
     width: 60%;
   }
   /* Contact Styles End */
+
+  /* Resume Styles Start */
+  .resume-card {
+    width: 35%;
+    height: 125px;
+  }
+
+  .resume-card p {
+    padding-bottom: 20px;
+  }
+
+  .fa-file-pdf {
+    font-size: 45px;
+  }
+  /* Resume Styles End */
 
   /* Footer Styles Start */
   footer {
@@ -531,6 +573,17 @@ footer p {
 
 
   /* Contact Styles End */
+
+  /* Resume Styles Start */
+  .resume-card {
+    width: 25%;
+    height: 150px;
+  }
+
+  .resume-card p {
+    font-size: 20px;
+  }
+  /* Resume Styles End */
 
   /* Footer Styles Start */
   footer {
