--- a/src/index.css
+++ b/src/index.css
@@ -202,6 +202,22 @@ aside p {
 /* Work Styles End */
 
 /* Contact Styles Start */
+.contact-flex {
+  display: flex;
+  justify-content: space-around;
+  line-height: 1.5;
+  margin-top: 40px;
+}
+
+.contact-text h3 {
+  color: var(--color-1-dark);
+}
+
+.contact-text p {
+  color: var(--color-3)
+}
+
+/* Contact Form Styles - Not Currently Implemented */
 .contact-form {
   width: 85%;
   margin: auto;
@@ -378,6 +394,7 @@ footer p {
   /* Work Styles End */
 
   /* Contact Styles Start */
+  /* Contact Form Styles - Not Currently Implemented */
   .contact-form {
     width: 60%;
   }
@@ -559,6 +576,21 @@ footer p {
   /* Work Styles End */
 
   /* Contact Styles Start */
+  .contact-flex {
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .contact-flex .contact-text:nth-child(2) {
+    padding-top: 12px;
+  }
+
+  .contact-text {
+    width: 75%;
+  }
+  
+  /* Contact Form Styles - Not Currently Implemented */
   .contact-form {
     width: 40%;
   }
@@ -570,8 +602,6 @@ footer p {
   .contact-form input {
     padding: 4px;
   }
-
-
   /* Contact Styles End */
 
   /* Resume Styles Start */
